            fix: all: regression in OGR-NG codebase (#4295)
            new: IPv6 support (#2982)
            imp: morphos: Battery/AC power det & CPU temp query
            new: opencl: New rc5-72 cores
            imp: morphos: use standard MUI List instead of NList
            imp: x86/amd64: AMD APU detection/selection (#4536)
            imp: x86: Pentium M core selection (#4534)

2.9110.519  new: amd64: New GO-2c core
            new: amd64: New GO-2d core
            chg: amd64: Core pre-selection for most processors
            imp: x86/amd64: Intel Sandy Bridge detection/selection
            fix: x86: OGR core pre-selection for Intel Core iX (#4376)
            imp: x86/amd64: AMD APU detection/selection (#4429)
            imp: amd64: Via Nano core selection (#4437)
            imp: x86/amd64: AMD Opeteron 6xxx detection/selection (#4438)
            fix: cuda: processor counts for newer model fermi cards (#4441)
            imp: win: allow CUDA/Stream to coexist (#4274)
            imp: gpu: rename -cpuinfo to -gpuinfo

2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
            fix: all: OGR-NG incorrect node count after full restart
                 of combined stub (#4290)
            imp: all: a kind of stress test for OGR-NG
            imp: cellbe: faster OGR-NG SPU ASM core
            imp: all: log errors to file during tests and buffer update
            fix: x86: possible division by zero in cpuinfo
            imp: x86: CPU detect and core select updates (#4297,#4299,#4301)
            imp: x86: AMD Opteron/Phenom detection (#4326,#4256,#4370)
            fix: all: logging issues with more then 26 crunchers (#4345)
            imp: ppc: recognize more PowerPC processors (#4349)
            imp: ppc: core selection for Power6 series (#4349)
            fix: win64: only 32 processors were used (#4352)
            imp: x86: identification of new i3/i5 chips (#4376)
            imp: stream: new rc5-72 core, expected decreased GUI lag