@@ -437,6 +437,7 @@ int selcoreGetPreselectedCoreForProject_ogr_ng()
           {
             switch (detected_type)
             {
+              case 0x1B: cindex = 6; break; /* Intel Haswell (#4533) */
               default:   cindex = 7;
             }
           }
@@ -446,6 +447,7 @@ int selcoreGetPreselectedCoreForProject_ogr_ng()
             switch (detected_type)
             {
               case 0x15: cindex = 3; break; /* Intel i3/i5/i7 */
+              case 0x1A: cindex = 3; break; /* Intel Ivy Bridge (#4514) */
               default:   cindex = 6; break;
             }
           }
@@ -494,6 +496,8 @@ int selcoreGetPreselectedCoreForProject_ogr_ng()
       switch (detected_type)
       {
         case 0x09: cindex = 1; break; /* AMD: generic (#4214) */
+        case 0x1A: cindex = 2; break; /* Intel Ivy Bridge (#4514) */
+        case 0x1B: cindex = 2; break; /* Intel Haswell (#4533) */
         case 0x20: cindex = 1; break; /* AMD Bobcat (#4429) */
       }
       if (cindex == -1)
